ci: test with different python versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,16 @@ on: [push]
 jobs:
   checks:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - python: '3.8'
+          - python: '3.12'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python }}
     - run: python3 -m pip install ruff
     - name: lint
       run: ruff check
