--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,10 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
-    - run: python3 -m pip install ruff
+    - run: python3 -m pip install ruff coverage
     - name: lint
       run: ruff check
     - name: test
-      run: python3 -m unittest
+      run: python3 -m coverage run -m unittest
+    - name: coverage
+      run: python3 -m coverage report
